<resources>
    <string name="app_name">CourseExchange</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings1">Monsoon13</string>
    <string name="action_settings2">Monsoon14</string>
    <string name="action_settings3">Summer14</string>
    <string name="action_settings4">Winter13</string>
    <string name="action_settings5">Winter14</string>
    <string name="action_settings6">Winter15</string>

    <string name="action_settings11">Core Courses</string>
    <string name="action_settings12">HSS Courses</string>
    <string name="action_settings13">Tech Courses</string>
    <string name="action_settings14">Non-Tech Courses</string>
    <string name="action_settings15">Online Courses</string>
    <string name="action_settings16">Summer Courses</string>

    <string name="action_settings21">Mobile Computing</string>
    <string name="action_settings22">Security</string>
    <string name="action_settings23">Image Analysis</string>
    <string name="action_settings24">Theory</string>
    <string name="action_settings25">Data Analytics</string>
    <string name="action_settings26">Comp Arch</string>

    <!-- Main menu_speakers -->
    <string name="menu_course_feed">Course Feed</string>
    <string name="menu_my_courses">My Courses</string>
    <string name="menu_all_courses">All Courses</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_streams">Streams</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_Help">Help</string>
    <string name="menu_AboutUs">About Us</string>
    <string name="menu_availableCourses">Available Courses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stream_fragment">Hello Stream Fragment</string>
    <string name="course_feed_fragment">Hello Course Feed Fragment</string>
    <string name="all_courses_fragment">Hello All Courses Fragment</string>
    <string name="discover_fragment">Hello Discover Fragment</string>
    <string name="my_courses_fragment">Hello My Courses Fragment</string>
    <string name="about_us_fragment">Hello About us Fragment</string>
    <string name="help_fragment">Hello Help Fragment</string>


    <!-- Hamburger Animation -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--List View Data-->
    <string name="dhcs_txt">Designing Human Centered Systems</string>
    <string name="dhcs_dsc">CSE 501 (Ponnurangam Kumaraguru)</string>
    <string name="number_theory_txt">Number Theory</string>
    <string name="number_theory_dsc">MTH 502 (Somitra Sanadhya)</string>
    <string name="graph_theory_txt">Graph Theory</string>
    <string name="graph_theory_dsc">MTH 303 (Somitra Sanadhya)</string>

    <string name="linear_algebra_txt">Linear Algebra</string>
    <string name="linear_algebra_dsc">MTH 100 (Samaresh Chatterjee)</string>
    <string name="digital_circuits_txt">Digital Circuits</string>
    <string name="digital_circuits_dsc">ECE 100 (RN Biswas)</string>
    <string name="intro_to_prog_txt">Introduction to Programming</string>
    <string name="intro_to_prog_dsc">CSE 100 (H.B. Acharya)</string>
    <string name="prob_stat_txt">Probability and Satistics</string>
    <string name="prob_stat_dsc">MTH 101(Richa Singh)</string>
    <string name="dsa_txt">Data Structure and Algorithms</string>
    <string name="dsa_dsc">CSE 101 (Rahul Purandare)</string>
    <string name="ied_txt">Introduction to Engineering Design</string>
    <string name="ied_dsc">CSE ECE101 (R.N. Biswas)</string>

    <string name="icon_content_description">Sample Icon</string>

    <string name="loadText">Average Load Hrs/Week</string>
    <string name="gradeText">Average Grade</string>

    <!--Mobile Computing Streams-->
    <string name="mc_txt">Mobile Computing</string>
    <string name="mc_dsc">CSE 535 (Vinayak Naik)</string>
    <string name="wn_txt">Wireless Networks</string>
    <string name="wn_dsc">CSE538 (Sanjit Kaul) </string>
    <string name="an_txt">Advanced Networks</string>
    <string name="an_dsc">CSE534 (Dheeraj Sanghi)</string>

    <!-- Available Course -->
    <string name="ac_appliedCrypto_txt">Applied Cryptography</string>
    <string name="ac_appliedCrypto_dsc">CSE 546 (Somitra Sanadhya)</string>
    <string name="ac_numberThoery_txt">Number Theory</string>
    <string name="ac_numberThoery_dsc">MTH 502 (Somitra Sanadhya)</string>
    <string name="ac_numberThoery1_txt">Number Theory</string>
    <string name="ac_numberThoery1_dsc">MTH 502 (B. Shetty)</string>
    <string name="ac_positivePsychology_txt">Positive Psychology</string>
    <string name="ac_positivePsychology_dsc">HSS 216 (Akshay Kumar)</string>


    <string name="help_text">Please feel free to contact our team members in case of any assistance.</string>
    <string name="aboutus_text"> We at IIITD try to make things simpler. We try to help those who find it difficult to choose what course to take. We are a group of dedicated programmers who tried to solve a real world problem.</string>


</resources>
