<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_courseFeed"
            android:icon="@drawable/ic_view_module_black_24dp"
            android:checked="false"
            android:title="@string/menu_course_feed" />

        <item
            android:id="@+id/nav_myCourses"
            android:icon="@drawable/ic_view_module_black_24dp"
            android:checked="false"
            android:title="@string/menu_my_courses" />
        <item
            android:id="@+id/nav_allCourses"
            android:icon="@drawable/ic_view_module_black_24dp"
            android:checked="false"
            android:title="@string/menu_all_courses" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_view_module_black_24dp"
            android:checked="false"
            android:title="@string/menu_discover" />
        <item
            android:id="@+id/nav_Streams"
            android:icon="@drawable/ic_view_module_black_24dp"
            android:checked="false"
            android:title="@string/menu_streams" />
    </group>
    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_view_module_black_24dp"
                android:checked="false"
                android:title="@string/menu_Settings" />
            <item
                android:id="@+id/nav_aboutUs"
                android:icon="@drawable/ic_view_module_black_24dp"
                android:checked="false"
                android:title="@string/menu_AboutUs" />
        </menu>
    </item>

</menu>